--- a/style.css
+++ b/style.css
@@ -38,6 +38,28 @@ body {
     transition: 0.4s;
 }
 
+/* Recipe gallery */
+
+.recipe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.recipe li {
+    height: 40vh;
+    flex-grow: 1;
+    list-style-type: none;
+}
+
+.recipe img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+    border-radius: 2em;
+}
+
 /* Text styling */
 
 .title-header,
@@ -46,6 +68,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
 
 
 .title-header-small,
