--- a/style.css
+++ b/style.css
@@ -60,6 +60,16 @@ body {
     border-radius: 2em;
 }
 
+.recipe-image {
+    transition: transform .5s;
+}
+
+.recipe-image:hover {
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+}
+
 /* Text styling */
 
 .title-header,
