--- a/style.css
+++ b/style.css
@@ -120,7 +120,10 @@ body {
     border: solid black 0.2em;
     box-shadow: 0.3em 0.2em #0000007a;
     border-radius: 0.2em 0.6em 0.2em 0.6em;
+    font-size: 20px;
+    width: auto;
 }
+
 
 .about-container {
     width: 50em;
